# march-tales

./: .deploy.stamp  .editorconfig  .env.local.SAMPLE  .env.secure.SAMPLE  .eslintignore  .eslintrc.yaml  .gitignore  .lvimrc  .prettierignore  .stylelintignore  .stylelintrc.yaml  CHANGELOG.md  README.md  default_settings.py  deploy.stamp  index.wsgi  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test.stamp  tsconfig.json  webpack.config.js  webpack.helpers.js.UNUSED  webpack.params.js  wsgi.py
.scripts/: django-add-test-data.sh  django-add-test-users.sh  django-clear-extra-static.sh  django-clear-migrations.sh  django-export-db.sh  django-fully-reset-db.sh  django-i18n-compilemessages.sh  django-i18n-makemessages.sh  django-local-db-backup.sh  django-local-db-update.sh  django-makemigrations.sh  django-migrate.sh  django-reset-db.sh  django-shell.sh  django-showmigrations.sh  django-test.sh  django-update-db.sh
.utils/: check-python-env.sh  clean-all.sh  config.sh  push-test-deploy.sh  push-with-tags.sh  update-build-variables.sh
core/: appConfig.py  appEnv.py  appSecrets.py  constants.py  djangoConfig.py
core/ffmpeg/: __init__.py  probe.py  probeDuration.py  probeDuration_test.py  split.py
core/helpers/: __init__.py  files.py  runtime.py  time.py
core/logging/: CustomHttpHandler.py  NoColorFormatter.py  __init__.py  getDebugLogger.py  loggerConfig.py
django_project/: settings.py
poetry-scripts/: __init__.py  django.py  export_requirements.py
src/: README.md
src/assets/: aos.ts  checkProjectVersion.ts  index.ts  processTextContent.ts  styles.scss  userSession.ts
static/: .gitignore  project-hash.txt  project-info.txt
static/assets/: index.ts  scripts.js  scripts.js.map  styles.css  styles.css.map  styles.scss
static/compiled/: scripts.js  scripts.js.map  styles.css  styles.css.map
static/unfold-fixes/: .editorconfig  series_order_controls.js  unfold-fixes.css  unfold-fixes.js
tales/: apps.py  models.py  settings.py
tales/converters/: FloatUrlParameterConverter.py
tales/middleware/: BeautifulMiddleware.py
tales/models/: modelsDdsSample.py
tales/templates/: base-core.html.django  base-layout.html.django
tales/urls/: __init__.py  accounts_urls.py  root_urls.py
tales/views/: __init__.py  root.py  system.py
tales_django/: admin.py  apps.py  ckeditor_storage.py  forms.py  get_flatpages_context.py  imagegenerators.py  loaders.py  models.py  resources.py  settings.py  sites.py  unfold.py  urls.py  views.py  wsgi.py
tales_django/admin/: MembershipAdmin.py  TrackAdmin.py  UserAdmin.py  __init__.py
tales_django/fixtures/: README.md  march-user.yaml  page-about.yaml  site-local.yaml  site-real.yaml  test-membership.yaml  test-tracks.yaml  test-users.yaml  user-lilliputten.yaml
tales_django/forms/: MembershipForm.py  SignUpForm.py  TrackAdminForm.py  UpdateUserForm.py  UserAdminForm.py  __init__.py
tales_django/middleware/: BeautifulMiddleware.py  CurrentRequestMiddleware.py  ProjectMinifyHtmlMiddleware.py
tales_django/migrations/: 0001_initial.py  0002_alter_track_audio_duration.py  0003_alter_author_name_en_alter_author_name_ru_and_more.py  0004_alter_author_options_alter_rubric_options_and_more.py  0005_alter_track_played_count_alter_track_preview_picture.py  0006_alter_track_author.py  0007_alter_author_portrait_picture.py  0009_alter_track_for_members.py  (+18 more)
tests/: example_django_user.py  example_send_smtplib_email.py  test_send_django_email.py  test_send_smtplib_email.py
(+510 files in other folders)
